1.0.4
- Add 3 more seasonings
- Add bibimbap and vegetable skewers
- Add Tray TODO survive check

1.0.3
- Add beef and mushroom skewers
- Reduce second step required cooking time
- Add Jade support

1.0.2
- Return sticks when consuming skewers

1.0.1
- Fix seasoning name display
- Fix Carry On compatibility
- Allow sandwich and wraps to carry over food effects
- Change sandwich recipe a little bit