@@ -1,4 +1,5 @@
 {
+  "barbequesdelight.info.flip": "ɹǝʍǝʞs dıןɟ oʇ ʞɔıןɔ ʇɥbıɹ ʞɐǝuS",
   "barbequesdelight.jade.burnt": "¡¡ʇuɹnᗺ",
   "barbequesdelight.jade.cook": "%ss :buıʞooƆ",
   "barbequesdelight.jade.cooked": "¡pǝʞooƆ",
