@@ -1,4 +1,5 @@
 {
+  "barbequesdelight.info.flip": "Sneak right click to flip skewer",
   "barbequesdelight.jade.burnt": "Burnt!!",
   "barbequesdelight.jade.cook": "Cooking: %ss",
   "barbequesdelight.jade.cooked": "Cooked!",
