@@ -3,15 +3,29 @@
   "pools": [
     {
       "bonus_rolls": 0.0,
+      "entries": [
+        {
+          "type": "minecraft:item",
+          "name": "barbequesdelight:grill"
+        }
+      ],
+      "rolls": 1.0
+    },
+    {
+      "bonus_rolls": 0.0,
       "conditions": [
         {
-          "condition": "minecraft:survives_explosion"
+          "block": "barbequesdelight:grill",
+          "condition": "minecraft:block_state_property",
+          "properties": {
+            "has_campfire": "true"
+          }
         }
       ],
       "entries": [
         {
           "type": "minecraft:item",
-          "name": "barbequesdelight:grill"
+          "name": "minecraft:campfire"
         }
       ],
       "rolls": 1.0
