@@ -1,0 +1,2 @@
+public net.minecraft.world.item.context.UseOnContext m_43718_()Lnet/minecraft/world/phys/BlockHitResult; # getHitResult
+public net.minecraft.world.item.context.BlockPlaceContext f_43628_ # replaceClicked
